--- a/public/webfile.html
+++ b/public/webfile.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 <h1>My Header</h1>
+
 <p>My paragraph.</p>
+<p><%= users %></p>
 <img src="testpic.png" width="104" height="142"></img>
 <button onclick="document.location='./subserver'">click me</button>
 </body>
